--- a/assets/css/darkmodestyleservices.css
+++ b/assets/css/darkmodestyleservices.css
@@ -8,14 +8,14 @@
 }
 
 .darkmode {
-  --base-color: #070b1d;
-  --base-variant: #101425;
+  --base-color: #00264d;
+  --base-variant: #00264d;
   --text-color: #ffffff;
   --secondary-text: #a4a5b8;
 }
 
 body.darkmode {
-  background-color: #121212;
+  background-color: #00264d;
   color: var(--text-color);
 }
 
@@ -29,7 +29,7 @@ body.darkmode section#service-details,
 body.darkmode .service-box,
 body.darkmode .services-list,
 body.darkmode .footer-top ul li a {
-  background-color: #1e1e1e;
+  background-color: #00264d;
   color: var(--text-color);
 }
 
