--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1078,7 +1078,7 @@ section,
 }
 
 .services .service-item .icon i {
-  color: color-mix(in srgb, var(--default-color), transparent 30%);
+  color: transparent 30%);
   font-size: 56px;
   transition: ease-in-out 0.3s;
   z-index: 2;
